# dsl_formatter

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  dsl_token.py  dsl_tokenizer.py  main.py  pyproject.toml  simple_connection.dsl
src/: app.py  checkers.py  dsl_file.py
src/application/: linter.py
src/application/checkers/: url_checker.py
src/application/interfaces/: http_requester.py
src/domain/: checkers.py  code_generator.py  module.py  parser.py  supported_file.py
src/domain/parser/: __init__.py  parser.py  parser_elements.py
src/domain/tree/: module.py
src/infra/: requests_http_requester.py
src/presentation/: stdout_reporter.py
src/url_checker/: url_checker.py
tests/: test_dls_tokenizer.py  test_url_checker.py
tests/fake/: fake_http_requester.py
tests/test_application/test_checkers/: test_url_checker.py
tests/test_domain/: test_code_generator.py  test_parser.py
