[tool.poetry]
name = "dsl-formatter"
version = "0.1.0"
description = ""
authors = ["Alexander Rakhamev <rahmaevao@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyparsing = "^3.1.2"
loguru = "^0.7.2"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
ruff = "^0.4.10"
pytest-clarity = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
